[tool.poetry]
name = "quipubase"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cython = "^3.0.10"
pydantic = "^2.7.1"
fastapi = "^0.111.0"
orjson = "^3.10.3"
numpy = "^1.26.4"
hnswlib = "^0.8.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
