[tool.poetry]
name = "quipubase"
version = "0.0.1-alpha"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cython = "^3.0.10"
pydantic = "^2.7.1"
fastapi = "^0.111.0"
orjson = "^3.10.3"
numpy = "^1.26.4"
hnswlib = "^0.8.0"
httpx = "^0.27.0"
openai = "^1.28.2"
pyppeteer = "^2.0.0"
bs4 = "^0.0.2"
lxml = "^5.2.2"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
black = "^21.12b0"
isort = "^5.10.2"

[tool.poetry.scripts]
quipubase = "quipubase.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
